fixed some css - there was an error with login/register page buttons due to overlapping class names

--- a/src/Components/Main/FlashcardSetPage/FlashcardSetPage.css
+++ b/src/Components/Main/FlashcardSetPage/FlashcardSetPage.css
@@ -52,7 +52,7 @@
     transform: rotateY(180deg);
 }
 
-.buttons {
+.flashcard-buttons {
     display: flex;
     margin: auto;
 }
